--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="col-6">
             <nav>
               <ul class="menu">
-                <li><a href="">Home 1</a></li>
+                <li><a href="">Home</a></li>
                 <li class="products">
                   <a href="">Products</a>
                   <ul class="sub-menu">
