--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <ul class="menu">
                 <li><a href="">Home 1</a></li>
                 <li class="products">
-                  <a href="">Products</a>
+                  <a href="">Products 2</a>
                   <ul class="sub-menu">
                     <li><a href="">Women's</a></li>
                     <li><a href="">Men's</a></li>
