--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="">Kids'</a></li>
                   </ul>
                 </li>
-                <li><a href="">Payment</a></li>
+                <li><a href="">Payment 3</a></li>
                 <li><a href="">Shipping</a></li>
                 <li><input type="search" placeholder="search" /></li>
                 <li>
@@ -73,7 +73,13 @@
       </div>
     </header>
 
-    <main class="main">Main</main>
+    <main class="main">
+      <div class="">
+        <div class="Main">
+          <a href="">Main</a>
+        </div>
+      </div>
+    </main>
 
     <footer class="footer">Footer</footer>
   </body>
