--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           <div class="col-6">
             <nav>
               <ul class="menu">
-                <li><a href="">Home 1</a></li>
+                <li><a href="">Home</a></li>
                 <li class="products">
-                  <a href="">Products 2</a>
+                  <a href="">Products</a>
                   <ul class="sub-menu">
                     <li><a href="">Women's</a></li>
                     <li><a href="">Men's</a></li>
                     <li><a href="">Kids'</a></li>
                   </ul>
                 </li>
-                <li><a href="">Payment 3</a></li>
+                <li><a href="">Payment</a></li>
                 <li><a href="">Shipping</a></li>
                 <li><input type="search" placeholder="search" /></li>
                 <li>
