--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
 
     <main class="main">
       <div class="">
-        <div class="Main">
-          <a href="">Main</a>
-        </div>
+        <div class="side-menu"></div>
       </div>
     </main>
 
